# Qt6QMLAdvanced_Video

./: .gitignore  CHANGES.md  README.md
2.CustomModelsInQML/10-EditableAbstractListModel/: CMakeLists.txt  main.cpp  main.qml
2.CustomModelsInQML/10-EditableAbstractListModel/module/: person.cpp  person.h
2.CustomModelsInQML/11-DecouplingDataSource/: CMakeLists.txt  InputDialog.qml  datasource.cpp  datasource.h  main.cpp  main.qml  personmodel.h
2.CustomModelsInQML/12-ModelListProperties/: CMakeLists.txt  datasource.h  main.cpp  main.qml  person.h  personmodel.cpp  personmodel.h
2.CustomModelsInQML/2-StringListModel/: CMakeLists.txt  README.md  main.cpp  main.qml
2.CustomModelsInQML/3-ObjectListModel/: CMakeLists.txt  README.md  main.cpp  main.qml
2.CustomModelsInQML/3-ObjectListModel/module/: person.h
2.CustomModelsInQML/3a-ObjectListModel/: CMakeLists.txt  README.md  main.cpp  main.qml
2.CustomModelsInQML/3a-ObjectListModel/module/: CMakeLists.txt  PersonDelegate.qml  person.cpp  person.h
2.CustomModelsInQML/4-EditableObjectListModel/: CMakeLists.txt  main.cpp  main.qml  objectlistwrapper.cpp  objectlistwrapper.h  person.cpp  person.h
2.CustomModelsInQML/4-ObjectListModel/: CMakeLists.txt  main.cpp  main.qml
2.CustomModelsInQML/4a-EditableObjectListModel/: CMakeLists.txt  README.md  main.cpp  main.qml
2.CustomModelsInQML/4a-EditableObjectListModel/module/: DummyListModel.qml
2.CustomModelsInQML/5-EditableObjectListModel/: CMakeLists.txt  objectlistwrapper.cpp  objectlistwrapper.h
2.CustomModelsInQML/5-QPropertyEdits/: CMakeLists.txt  main.cpp  main.qml  objectlistwrapper.cpp  objectlistwrapper.h  person.cpp
2.CustomModelsInQML/6-AbstractListModel/: CMakeLists.txt  InputDialog.qml  main.cpp  main.qml  person.cpp  person.h  personmodel.cpp  personmodel.h
2.CustomModelsInQML/6-EditableObjectListModel/: CMakeLists.txt  main.cpp  main.qml
2.CustomModelsInQML/6-EditableObjectListModel/module/: PersonDelegate.qml  person.cpp  person.h
2.CustomModelsInQML/6a-AbstractListModel/: CMakeLists.txt  README.md  main.cpp  main.qml
2.CustomModelsInQML/6a-AbstractListModel/module/: PersonDelegate.qml  person.cpp  person.h
2.CustomModelsInQML/6b-EditableAbstractListModel/: CMakeLists.txt  README.md  main.cpp  main.qml
2.CustomModelsInQML/6b-EditableAbstractListModel/module/: CMakeLists.txt
2.CustomModelsInQML/7-DecouplingDataSource/: CMakeLists.txt  datasource.cpp  datasource.h  main.cpp  main.qml  person.cpp  person.h  personmodel.cpp  personmodel.h
2.CustomModelsInQML/7-QPropertyEdits/: CMakeLists.txt  objectlistwrapper.cpp  objectlistwrapper.h
2.CustomModelsInQML/8-AbstractListModel/: CMakeLists.txt  main.cpp  main.qml
2.CustomModelsInQML/8-ModelListProperties/: CMakeLists.txt  datasource.cpp  main.cpp  main.qml  person.cpp  personmodel.h
2.CustomModelsInQML/9-AbstractListModel/: CMakeLists.txt  main.cpp  main.qml
3.RestApiClientV2/1-RestClientChallenge/: CMakeLists.txt  appwrapper.cpp  datasource.cpp  main.cpp  main.qml
3.RestApiClientV2/2-RestClientChallenge/: CMakeLists.txt  appwrapper.cpp  appwrapper.h  datasource.h  main.cpp  main.qml  post.h  postmodel.cpp  postmodel.h
3.RestApiClientV2/2-RestClientChallenge/module/: post.cpp  postapi.cpp  postapi.h  postmodel.cpp  postmodel.h
3.RestApiClientV2/2a-RestClientChallenge/: CMakeLists.txt  README.md  main.cpp  main.qml
3.RestApiClientV2/2a-RestClientChallenge/module/: CMakeLists.txt  PostDelegate.qml  post.h
3.RestApiClientV2/3-RestApiClientV2/: CMakeLists.txt  Main.qml  appwrapper.cpp  main.cpp  post.cpp
4.CustomVisualTypes/2-PaintingQMLItems/: CMakeLists.txt  README.md  learnqtlogo.cpp  learnqtlogo.h  main.cpp  main.qml  resource.qrc
4.CustomVisualTypes/3-BarChart/: CMakeLists.txt  main.cpp  main.qml  stairchart.cpp  stairchart.h
4.CustomVisualTypes/4-BarchartListProps/: CMakeLists.txt  main.cpp  main.qml  stair.cpp  stair.h  stairchart.cpp  stairchart.h
4.CustomVisualTypes/5-CanvasPureQmlVisual/: CMakeLists.txt  Circle.qml  main.cpp  main.qml
5.Singletons/2-QJsValue/: CMakeLists.txt  README.md  main.cpp  main.qml  singletonclass.cpp  singletonclass.h
5.Singletons/3-QObject/: CMakeLists.txt  README.md  main.cpp  main.qml  singletonclass.cpp  singletonclass.h
5.Singletons/4-QMLSingleton/: CMakeLists.txt  QmlSingleton.qml  README.md  main.cpp  main.qml
6.DiggingQML/2-QQmlEngineLoadQml/: CMakeLists.txt  main.cpp
6.DiggingQML/2-QQmlEngineLoadQml/qml/: main.qml
6.DiggingQML/3-ParseCustomQmlType/: CMakeLists.txt  footballteam.cpp  footballteam.h  main.cpp  player.cpp  player.h
6.DiggingQML/3-ParseCustomQmlType/qml/: main.qml
6.DiggingQML/4-QQuickViewVisualType/: CMakeLists.txt  main.cpp
6.DiggingQML/4-QQuickViewVisualType/qml/: main.qml
6.DiggingQML/5-QQmlApplicationEngine/: CMakeLists.txt  main.cpp  main.qml
6.DiggingQML/6-InvokeQmlMethod/: CMakeLists.txt  main.cpp  main.qml
6.DiggingQML/7-CatchQmlSignal/: CMakeLists.txt  appwrapper.cpp  appwrapper.h  main.cpp  main.qml
slides/2.CustomModelsInQML/: 2-StringListModel.drawio  3-ObjectListModel.drawio  4-EditableObjectListModel.drawio  5-QPropertyEdits.drawio  6-AbstractListModel.drawio  7-DecouplingDataSource.drawio  8-ModelListProperties.drawio
slides/3.RestApiClientV2/: .$1-RestClientChallenge.drawio.dtmp
slides/4.CustomVisualTypes/: 2-PaintingQMLItems.drawio  3-BarChart.drawio  4-BarchartListProps.drawio  5-CanvasPureQmlVisual.drawio
slides/5.Singletons/: .$3-QObject.drawio.dtmp  2-QJsValue.drawio  4-QMLSingleton.drawio
slides/6.DiggingQML/: .$2-QQmlEngineLoadQml.drawio.dtmp  .$4-QQuickViewVisualType.drawio.dtmp  .$7-CatchQmlSignal.drawio.bkp  3-ParseCustomQmlType.drawio  5-QQmlApplicationEngine.drawio  6-InvokeQmlMethod.drawio  7-CatchQmlSignal.drawio
